--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
-  "name": "a",
-  "version": "1.0.0",
-  "description": "",
+  "name": "h2o",
+  "description": "A clean and delicate Ghost theme.",
+  "version": "0.1.0",
+  "engines": {
+    "ghost": ">=1.0.0"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "eastpiger",
+    "email": "i@eastpiger.com",
+    "url": "https://eastpiger.com"
+  },
+  "config": {
+    "posts_per_page": 10
+  },
+  "screenshots": {
+    "desktop": "screenshot/ghost-theme-h2o-realhome.png",
+    "mobile": "screenshot/ghost-theme-h2o-realm.png"
+  },
+  "homepage": "https://github.com/eastpiger/ghost-theme-H2O",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
